index.html düzenlendi

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,17 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stok Paneli</title>
+    <meta charset="UTF-8">
+    <title>Stok Takip Paneli</title>
 </head>
 <body>
     <h1>Hoş geldiniz</h1>
     <p>Bu panelde ürünlerinizi görüntüleyebilirsiniz.</p>
+    <ul>
+        <li><a href="/urunler">Ürünleri Görüntüle</a></li>
+        <li><a href="/urun-ekle">Yeni Ürün Ekle</a></li>
+    </ul>
 </body>
 </html>
+
+
