Ürün ekleme linki düzeltildi

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <p>Bu panelde ürünlerinizi görüntüleyebilirsiniz.</p>
     <ul>
         <li><a href="/urunler">Ürünleri Görüntüle</a></li>
-        <li><a href="/urun-ekle">Yeni Ürün Ekle</a></li>
+        <li><a href="/urunler/yeni">Yeni Ürün Ekle</a>
     </ul>
 </body>
 </html>
