--- a/templates/urunler.html
+++ b/templates/urunler.html
@@ -1,15 +1,34 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ürünler</title>
+    <title>Ürün Listesi</title>
 </head>
 <body>
     <h1>Ürün Listesi</h1>
     <ul>
         {% for urun in urunler %}
-            <li>{{ urun.ad }} - {{ urun.stok }}</li>
+            <li>
+                {{ urun.ad }} - {{ urun.numara_araligi }} - Stok: {{ urun.stok }} - Varyant: {{ urun.varyant }}
+            </li>
         {% endfor %}
     </ul>
+
+    <h2>Yeni Ürün Ekle</h2>
+    <form action="/urun-ekle" method="post">
+        <label>Ürün Adı:</label><br>
+        <input type="text" name="ad" required><br>
+
+        <label>Numara Aralığı:</label><br>
+        <input type="text" name="numara_araligi" required><br>
+
+        <label>Stok:</label><br>
+        <input type="number" name="stok" required><br>
+
+        <label>Varyant:</label><br>
+        <input type="text" name="varyant" required><br><br>
+
+        <input type="submit" value="Ekle">
+    </form>
 </body>
 </html>
+
